# stylus-arenaton

./: .gitignore  ArenatonStylusWhitepaper.tex  Cargo.toml  arenaton_stylus_whitepaper.md  arenaton_whitepaper_espanol.tex  commands_local.txt  commands_sepolia.txt  local_deploy.sh  rust-toolchain.toml  stylus-arenaton.code-workspace  stylus_arenaton_engine_opt.wasm  stylus_arenaton_engine_opt2.wasm  stylus_erc20aton_opt.wasm  stylus_erc20aton_opt2.wasm  test-steps.txt
arenaton_engine/: Cargo.toml
notes/: commands_local.txt  commands_sepolia.txt  sepolia-deploy.txt  test-steps.txt
notesd/: a.json  commands.txt  commands_local.txt  commands_sepolia.txt  permit.rs  setup.sh  test-steps.txt  test_command.md
solidity/: IArenatonEngine.sol  IERC20ATON.sol  erc20ATONabi.sol
src/: all_rs_files_contents.txt  constructor.sol  lib.rs  ownable.rs
stylus_arenaton_engine/: Cargo.toml
stylus_erc20aton/: ATON.sol  Cargo.toml  (+1 more)
test_contracts/: Cargo.toml  rs_files_content.txt
test_contracts/abi/: abi.json
test_contracts/src/: .main.rs.swp  main.rs  rs_files_content.txt
test_contracts/src/arenaton_engine/: mod.rs
test_contracts/src/balance_of/: abi.json  mod.rs
test_contracts/src/call_contract/: mod.rs
test_contracts/src/constants/: mod.rs  wallets.rs
test_contracts/src/debug_mint_aton/: mod.rs
test_contracts/src/erc20aton/: mod.rs
test_contracts/src/functions/: fund_players.rs  fund_players2.rs  mod.rs
test_contracts/src/methods/: mod.rs
test_contracts/src/name/: mod.rs
test_contracts/src/players/: eth_balance.rs  fund_players_eth.rs  mod.rs
(+37 files in other folders)
