[package]
name = "test_contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
ethers = { version = "2.0.14", features = ["abigen"] }
tokio = { version = "1.28.2", features = ["full"] }

eyre = "0.6"
serde_json = "1.0"

[[bin]]
name = "main"
path = "src/main.rs"


[[bin]]
name = "debug_mint_aton"
path = "debug_mint_aton/mod.rs"

[[bin]]
name = "balance_of"
path = "balance_of/mod.rs"

[[bin]]
name = "swap"
path = "swap/mod.rs"